# spx-studio

./: .eslintrc.json  .gitignore  package-lock.json  package.json
.github/workflows/: build-desktop.yml
public/: index.html
src/: App.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  vst.rs
src/front/js/component/: AIBeatAssistant.js  AIEngine.js  AIMastering.js  AIMixAssistant.js  AIPlaylistCuration.js  AIStackGenerator.js  AITextToSong.js  AmpSimPlugin.js  ArrangeClipEditor.js  ArrangerView.js  AudioAnalysis.js  BeatMakerEnhancements.js  BreathRemover.js  ChannelStripAIMix.js  ChopEngine.js  ChopView.js  ChordAwareSampleBrowser.js  ChordProgressionGenerator.js  ChordTrack.js  Knob.js  (+63 more)
src/front/styles/: AIBeatAssistant.css  AIContentWriter.css  AICreditsPanel.css  AIMastering.css  AIMixAssistant.css  AIRadioDJ.css  AIStemSeparation.css  AIVideoStudio.css  AIVideoTools.css  AdminDashboard.css  AlbumDetailPage.css  AnnouncementBar.css  ArrangerView.css  ArtistDashboard.css  ArtistProfile.css  BandwidthStatus.css  BeatCart.css  BeatDetailPage.css  BeatLicenseAgreement.css  BeatMakerTab.css  BeatStore.css  BeatsTab.css  BrowseGenres.css  BrowsePodcasts.css  BrowseProducersPage.css  BrowseProfiles.css  BrowseStations.css  BrowseVideos.css  ChatModal.css  Checkout.css  CheckoutPage.css  ChordProgressionGenerator.css  ContentLibrary.css  CreateClipPage.css  CreateRadioStation.css  CreateStoryModal.css  CreatorDashboard.css  CustomMicBuilder.css  DAWMenuBar.css  DJMixer.css  (+130 more)
(+41 files in other folders)
